as far as I know), then f2c's temporary files will be written in a
temporary directory that is readable and writable only by the user and
that is removed at the end of f2c's execution.  To disable today's
change, compile sysdep.c with -DNO_TEMPDIR (i.e., with NO_TEMPDIR
#defined).

Sun Mar 27 20:06:49 MST 2005
sysdep.c: in set_tmp_names(), fix botched placement of
"if (debugflag == 1) return;":  move it below declarations.

Sun May  1 21:45:46 MDT 2005
sysdep.c:  fix a possible fault under -DMSDOS and improper handling
of a tmpnam failure under the unusual combination of both -DNO_MKDTEMP
and -DNO_MKSTEMP (without -DNO_TEMPDIR).

Tue Oct  4 23:38:54 MDT 2005
libf2c.zip:  uninit.c:  on IA32 Linux systems, leave the rounding
precision alone rather than forcing it to 53 bits; compile with
-DUNINIT_F2C_PRECISION_53 to get the former behavior.  This only
affects Fortran files translated by f2c -trapuv .

Sun May  7 00:38:59 MDT 2006
  main.c, version.c:  add options -? (or --help) that print out
pointers to usage documentation and -v (or --version) that print
the current version.
  fc script:  fix botch with -O[123]; recognize --version (or -v)
and --help (or -?).
  Add f2c.pdf == PDF version of f2c.ps.

Sun Oct  8 02:45:04 MDT 2006
  putpcc.c: fix glitch in subscripting complex variables:  subscripts
of type integer*8 were converted to integer*4, which causes trouble
when 32-bit addressing does not suffice.

Tue Sep 11 23:54:05 MDT 2007
  xsum.c:  insert explicit "int" before main.

Mon Dec  3 20:53:24 MST 2007
  libf2c/main.c: insert explicit "int" before main.

Sat Apr  5 21:39:57 MDT 2008
  libf2c.zip: tweaks for political C++ and const correctness, and
to fix ctype trouble in some recent Linux versions.  No behavior
should change.

Sun Apr  6 22:38:56 MDT 2008
  libf2c.zip: adjust alternate makefiles to reflect yesterday's change.

NOTE:  the old libf77 and libi77 bundles are no longer being updated.
Use libf2c.zip instead.