@@ -1,0 +1,15 @@
+     9478 Jun 11 10:56 index
+    43503 Jan 23 17:08 fixes
+   140490 Jan 23 17:08 f2c.ps
+     6124 Jan 23 17:08 f2c.1t
+     6061 Jan 23 17:08 f2c.1
+    43503 Jan 23 17:08 changes
+    97422 Jul 21  1991 libi77
+    44894 Jul 21  1991 libf77
+     4479 Jul 21  1991 f2c.h
+      325 Jul 21  1991 f2c
+     8452 Aug 25  1990 mbox
+     3686 Aug 25  1990 fc
+    20480 Aug 25  1990 f2cargs
+      338 Aug 25  1990 netlib.f2c
+     1238 Aug 25  1990 f2cargs.c
