@@ -48,5 +48,5 @@ for	f2c source
 ,	(look at the timestamps at the end of "readme from f2c").
 ,	Alternatively, get ftp://netlib.bell-labs.com:21/netlib/f2c/src.tar
 
-file	f2c/readme
+file	f2c/README
 
