@@ -57,7 +57,7 @@ for	f2c source
 ,	(look at the timestamps at the end of "readme from f2c").
 ,	Alternatively, get ftp://netlib.bell-labs.com:21/netlib/f2c/src.tar
 
-file	<a href="readme">readme</a>
+file	<a href="README">README</a>
 
 </pre>
 </body>
